# cvbot-white

./: .env  .gitattributes  .gitignore  README.md  convert_to_yolo.py  env.yaml  environment.yml  pid.py  pyproject.toml  requirements.txt  requirements_.txt  run_bot.py  tempp.py  train_yolo.py
annot_data/annotations/: train-annotations-bbox.csv
annotations/: class-descriptions-boxable.csv  train-annotations-bbox.csv
cvbot/communication/: controller.py  txtapiclient.py  txtapiconverter.py
cvbot/model/: device.py  (+4 more)
models/: Augmentation.py
src/: README.md  pyproject.toml  pyrightconfig.json  ruff.toml
src/cvbot_example/: PathandEnv.env  __main__.py
src/cvbot_example/cvbot/: README.md  pytest.env  requirements.txt
src/cvbot_example/cvbot/app/: launch_debugging_app.py
src/cvbot_example/cvbot/cvbot/communication/: txtapiclient.py  txtapiconverter.py
src/cvbot_example/cvbot/cvbot/model/: actuator.py  camera.py  sensor.py
src/cvbot_example/cvbot/cvbot/ui/: drive_control_app.py
src/cvbot_example/cvbot/docs/: material_list.xlsx  setup.md
src/cvbot_example/cvbot/scripts/util/: alter_requirements.py
src/cvbot_example/cvbot/tests/: conftest.py
src/cvbot_example/cvbot/tests/communication/: test_txtapiclient.py
src/cvbot_example/cvbot/tests/controller/: test_easy_drive_controller.py
src/cvbot_example/cvtools/: README.md  pyproject.toml  requirements.txt
src/cvbot_example/cvtools/cvtools/logger/: logging.py
src/cvbot_example/cvtools/cvtools/util/: reflection.py  typing.py
src/cvbot_example/cvtools/docs/: getting_started.md
utils/: augementation.py  convert_to_yolo.py  create_OpenImageV7_annotations.py  detect_from_cam_pt.py  single_detection.py  train_yolo.py
(+1398 files in other folders)
