[tool.poetry]
name = "cvtools"
version = "0.1.0"
description = ""
authors = ["Jan Philipp Schneider <jp-schneider@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^14.0.0"
typing-inspect = "^0.9.0"
numpy = "^2.2.5"
toml = "^0.10.2"
python-dotenv = "^1.1.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
